--- a/index.html
+++ b/index.html
@@ -1,19 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/kiwi.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Kiwi Machine</title>
-  </head>
-  <body style="overflow: hidden">
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/kiwi.png"/><link rel="manifest" href="/manifest.json"/><title>Kiwi Machine</title><script defer="defer" src="/static/js/main.834a173a.js"></script><link href="/static/css/main.0728d989.css" rel="stylesheet"></head><body style="overflow:hidden"><div id="root"></div></body></html>
